--- a/package.json
+++ b/package.json
@@ -9,10 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@react-native-community/geolocation": "^3.1.0",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/firestore": "^19.0.1",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.3",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.18.3",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-google-static-map": "^0.1.13",
+    "react-native-map-link": "^2.11.4",
+    "react-native-maps": "^1.10.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
