--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~50.0.3",
+    "expo": "~50.0.15",
+    "expo-location": "^16.5.5",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "express": "^4.18.3",
@@ -25,7 +26,7 @@
     "react-native": "^0.73.6",
     "react-native-google-static-map": "^0.1.13",
     "react-native-map-link": "^2.11.4",
-    "react-native-maps": "^1.13.0",
+    "react-native-maps": "^1.10.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3",
